# wasmiot-playground

./: Dockerfile  README.md  fullscreen.py  pyproject.toml  requirements.txt  test.ini
.devcontainer/: devcontainer.json
docs/: deployment-format.md  deployment-pipeline.md  wot-description-evaluation.md
src/thingi/: client.py  discover.py  httphost.py  init.py  settings.py  td.py  utils.py
src/thingi/context/: wasmiot.py  wot.py
src/thingi/mgmt/: __main__.py  app.py  bootstrap.py  certgen.py  cli.py  mgmt.css  mgmt.py
tests/: test_wot_producer.py
tests/data/: td_random.json
